[Add] セッションのテストスペックサンプル追加

--- a/app/views/rooms/show.html.slim
+++ b/app/views/rooms/show.html.slim
@@ -2,9 +2,9 @@ h1
   | Chat Room
 
 form id="test_form" data-form=""
-  input type="text" data-content=""
+  input type="text" id="content" data-content=""
   input type="file" data-picture=""
-  input type="submit" data-send=""
+  input type="submit" id="submit_btn" data-send=""
 
 button data-otherChannel=""
   | 他チャンネルテスト
